--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Hallo dit is een titel</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
   <h1>Hello</h1>
-  <p>Where do you have the nerve?</p>
+  <p>.net is kut</p>
 </body>
 
 </html>
