--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
 
 <body>
   <h1>Hello</h1>
-  <p>.net is kut</p>
+  <p>beep beep boop boop</p>
+  <p> work in progress yesyes</p>
+  
+  <img src="https://tenor.com/view/grumpy-cat-explodes-determined-gif-15497535">
 </body>
 
 </html>
