--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <h1>Hello</h1>
   <p>beep beep boop boop</p>
   <p> work in progress yesyes</p>
-  
-  <img src="https://tenor.com/view/grumpy-cat-explodes-determined-gif-15497535">
+
+  <img src="https://media.tenor.com/Ce8gN7yf_tcAAAAC/grumpy-cat-explodes-determined.gif">
 </body>
 
 </html>
