--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,39 @@
   <title>Hallo dit is een titel</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-
 <body>
-  <h1>Hello</h1>
-  <p>beep beep boop boop</p>
-  <p> work in progress yesyes</p>
 
-  <img src="https://media.tenor.com/Ce8gN7yf_tcAAAAC/grumpy-cat-explodes-determined.gif">
+  <div id="image"></div>
+
+<!--  <img src="https://media.tenor.com/Ce8gN7yf_tcAAAAC/grumpy-cat-explodes-determined.gif">-->
+
+
+<script>
+  function ajax_get(url, callback) {
+    var xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+      if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+        console.log('responseText:' + xmlhttp.responseText);
+        try {
+          var data = JSON.parse(xmlhttp.responseText);
+        } catch (err) {
+          console.log(err.message + " in " + xmlhttp.responseText);
+          return;
+        }
+        callback(data);
+      }
+    };
+
+    xmlhttp.open("GET", url, true);
+    xmlhttp.send();
+  }
+
+  ajax_get('https://api.thecatapi.com/v1/images/search?size=full', function(data) {
+    var html = '<img src="' + data[0]["url"] + '">';
+    document.getElementById("image").innerHTML = html;
+  });
+
+</script>
 </body>
 
 </html>
